# SqueezedAttention

./: .gitignore  README.md  environment_conda2.ym
SqueezedAttention-main/: debug_clustering.sh  environment.yml  environment_sq310.yml  offline_clustering.py  packages_list.txt  pyproject.toml  requirements_conda.txt  run_eval_yourself.sh  run_offline_clustering.sh
SqueezedAttention-main/LongBench/: eval.py  pred.py  requirements.txt  run_different_prefix_offline.sh
SqueezedAttention-main/LongBench/config/: dataset2maxlen.json  model2maxlen.json  model2path.json
SqueezedAttention-main/LongBench/pred/LLaMA-2-7B-32K_PC5_PERC0.7/: multifieldqa_en.jsonl  narrativeqa.jsonl  qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred/LLaMA-2-7B-32K_PC5_PERC0.8/: multifieldqa_en.jsonl  narrativeqa.jsonl  qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred/LLaMA-2-7B-32K_PC5_PERC0.9/: multifieldqa_en.jsonl  narrativeqa.jsonl  qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred/LLaMA-2-7B-32K_baseline/: multifieldqa_en.jsonl  narrativeqa.jsonl  qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred_VA/LLaMA-2-7B-32K_PC5_PERC0.7/: qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred_VA/LLaMA-2-7B-32K_PC5_PERC0.8/: qasper.jsonl  result.json
SqueezedAttention-main/LongBench/pred_VA/LLaMA-2-7B-32K_PC5_PERC0.9/: narrativeqa.jsonl  qasper.jsonl  result.json
SqueezedAttention-main/LongBench/retrieval/: pred.py
SqueezedAttention-main/squeezedattention/: clustering.py  utils.py
(+12 files in other folders)
