[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeezedattention"
version = "0.1.0"
description = "Squeezed Attention: Accelerating Long Context Length LLM Inference"
readme = "README.md"
requires-python = ">3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.2",
    "bitsandbytes==0.43.1",
    "datasets!=2.5.0",
    "accelerate>=0.21.0",
    "safetensors>=0.4.1",
    "sentencepiece>=0.1.91,!=0.1.92",
    "scikit-learn>=1.3.0",   # fallback KMeans, không dùng cuml
    "pyarrow>=14.0.0,<15.0.0",
    "numpy>=1.24,<2.0",
    "tqdm>=4.27",
]

[tool.setuptools.packages.find]
where = ["."]